# subgroup-separability

./: .gitignore  LICENSE  README.md  analysis.ipynb  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
configs/: config.yaml
configs/datamodule/: chexpert.yaml  fitzpatrick17k.yaml  ham10000.yaml  mimic.yaml  papila.yaml
configs/experiment/: chexpert_age.yaml  chexpert_race.yaml  chexpert_sex.yaml  default.yaml  fitzpatrick17k_skin.yaml  ham10000_age.yaml  ham10000_sex.yaml  mimic_age.yaml  mimic_race.yaml  mimic_sex.yaml  papila_age.yaml  papila_sex.yaml
configs/model/: baseline.yaml
datasets/: dataset.py  test_datasets.py
models/: baseline.py  metrics.py  transforms.py
preprocessing/: chexpert.ipynb  fitzpatrick.ipynb  ham10000.ipynb  mimic.ipynb  papila.ipynb  test_preprocessing.py
splits/chexpert/: val.csv
splits/fitzpatrick17k/: test.csv  val.csv
splits/ham10000/: test.csv  train.csv  val.csv
splits/papila/: test.csv  train.csv  val.csv
sweeps/: README.md  noise_ablation.yaml  predict_attr.yaml  predict_disease.yaml
